fix repeat image on tablet

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ a {
 
 body {
     background-image: url('./img/schousekate.jpg');
+    background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     font-size: 1.1rem;
